--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -267,10 +267,9 @@ function runWebGLApp() {
 
 <body onLoad='runWebGLApp()'>
 <div id='top'>
-	<h1>WebGL Beginner's Guide - Chapter 3</h1>
-	<h2>Hero - Moving Light</h2>
+	<h1>Computer Graphic - Solar System</h1>
+	<h2>Turning Earth</h2>
 	<div id='logo-packt'><img src='packt.gif'/></div>
-	<h3>vec3 light = vec3(uMVMatrix * vec4(uLightDirection, 0.0));</h3>
 </div>
 
 <div id='contents'>
